@@ -5,37 +5,41 @@ import com.omegafrog.My.piano.app.external.tossPayment.Payment;
 import com.omegafrog.My.piano.app.external.tossPayment.PaymentStatusChangedResult;
 import com.omegafrog.My.piano.app.external.tossPayment.TossPaymentInstance;
 import com.omegafrog.My.piano.app.utils.AuthenticationUtil;
-import com.omegafrog.My.piano.app.web.exception.payment.CashOrderCalculateFailureException;
-import com.omegafrog.My.piano.app.web.exception.payment.CashOrderConfirmFailedException;
-import com.omegafrog.My.piano.app.web.exception.payment.TossAPIException;
 import com.omegafrog.My.piano.app.web.domain.cash.CashOrder;
 import com.omegafrog.My.piano.app.web.domain.cash.CashOrderRepository;
 import com.omegafrog.My.piano.app.web.domain.cash.PaymentHistory;
 import com.omegafrog.My.piano.app.web.domain.user.User;
-import com.omegafrog.My.piano.app.web.domain.user.UserRepository;
-import com.omegafrog.My.piano.app.web.dto.order.CashOrderDto;
-import com.omegafrog.My.piano.app.web.enums.OrderStatus;
 import com.omegafrog.My.piano.app.web.dto.dateRange.CustomDateRange;
 import com.omegafrog.My.piano.app.web.dto.dateRange.DateRangeFactory;
+import com.omegafrog.My.piano.app.web.dto.order.CashOrderDto;
+import com.omegafrog.My.piano.app.web.enums.OrderStatus;
+import com.omegafrog.My.piano.app.web.exception.payment.CashOrderCalculateFailureException;
+import com.omegafrog.My.piano.app.web.exception.payment.CashOrderConfirmFailedException;
+import com.omegafrog.My.piano.app.web.exception.payment.TossAPIException;
+import com.omegafrog.My.piano.app.web.exception.payment.WrongOrderStateException;
 import jakarta.persistence.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.annotation.Profile;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.annotation.Nullable;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@Transactional
 public class CashOrderApplicationService {
 
     private final CashOrderRepository cashOrderRepository;
+    private final TossPaymentInstance tossPaymentInstance;
     @PersistenceUnit
     private EntityManagerFactory emf;
     private final DateRangeFactory dateRangeFactory;
@@ -74,9 +78,9 @@ public class CashOrderApplicationService {
      *     </li>
      * </ol>
      *
-     * @param paymentKey   : 토스 결제 요청 API에서 생성한 결제 객체를 구분하는 키
-     * @param orderId      : 클라이언트에서 생성한 현금 주문을 식별하는 키
-     * @param amount       : 총 결제 금액
+     * @param paymentKey : 토스 결제 요청 API에서 생성한 결제 객체를 구분하는 키
+     * @param orderId    : 클라이언트에서 생성한 현금 주문을 식별하는 키
+     * @param amount     : 총 결제 금액
      */
     public void requestCashOrder(String paymentKey, String orderId, int amount) throws JsonProcessingException {
         CashOrder byOrderId;
@@ -92,7 +96,7 @@ public class CashOrderApplicationService {
         byOrderId = entityManager.find(CashOrder.class, orderId);
         user = entityManager.find(User.class, loggedInUser.getId());
 
-        if(user == null || byOrderId == null){
+        if (user == null || byOrderId == null) {
             entityManager.close();
             throw new EntityNotFoundException();
         }
@@ -112,34 +116,42 @@ public class CashOrderApplicationService {
             user.chargeCash(amount);
             // order state 변경
             byOrderId.changeState(OrderStatus.DONE);
+            tx.commit();
 
         } catch (EntityNotFoundException | CashOrderCalculateFailureException
                  | CashOrderConfirmFailedException | TossAPIException e
         ) {
+            tx.rollback();
+            tx.begin();
             byOrderId.changeState(OrderStatus.ABORTED);
+            tx.commit();
             throw e;
         } finally {
             entityManager.merge(user);
             entityManager.merge(byOrderId);
-            tx.commit();
             entityManager.close();
         }
     }
+
     @Transactional
-    public List<PaymentHistory> getPaymentHistory(LocalDate start, LocalDate end, @Nullable Pageable pageable) {
+    public Page<PaymentHistory> getPaymentHistory(LocalDate start, LocalDate end, Pageable pageable) {
         User loggedInUser = authenticationUtil.getLoggedInUser();
         // expired handling
         List<CashOrder> expired = cashOrderRepository.findExpired(loggedInUser.getId(), new CustomDateRange(LocalDate.now(), LocalDate.now()));
-        for(CashOrder order : expired)
+        for (CashOrder order : expired)
             order.changeState(OrderStatus.EXPIRED);
 
-        List<CashOrder> byUserId = null;
-
+        Page<CashOrder> cashOrders;
         if (start != null && end != null)
-            byUserId = cashOrderRepository.
+            cashOrders = cashOrderRepository.
                     findByUserIdAndDate(loggedInUser.getId(), pageable, dateRangeFactory.calcDateRange(start, end));
-        else byUserId = cashOrderRepository.findByUserId(loggedInUser.getId(), pageable);
-        return byUserId.stream().map(PaymentHistory::new).toList();
+
+        else cashOrders = cashOrderRepository.findByUserId(loggedInUser.getId(), pageable);
+        return PageableExecutionUtils.getPage(
+                cashOrders.getContent().stream().map(PaymentHistory::new).collect(Collectors.toList()),
+                pageable,
+                cashOrders::getTotalElements
+        );
     }
 
     @Transactional
@@ -155,19 +167,39 @@ public class CashOrderApplicationService {
     /**
      * 해당 스케줄링을 실행한 날짜 00:00~24:00 사이의 cash order를 검사해서 정리<br/>
      * state가 READY, IN_PROGRESS이고 유효기간이 만료된 cash order의 state를 EXPIRED로 변경
-     *
      */
-//    @Scheduled(cron ="0 0 0 * * ?")
-    @Scheduled(cron="0 0/1 * * * ?")
+//  @Scheduled(cron ="0 0 0 * * ?")
+//    @Scheduled(cron="0 0/1 * * * ?")
+    @Profile("!test")
     @Transactional
     @Async("ThreadPoolTaskExecutor")
-    public void handleExpiredCashOrders(){
+    public void handleExpiredCashOrders() {
         LocalDate today = LocalDate.now();
         List<CashOrder> expiredCashOrders =
                 cashOrderRepository.findExpired(new CustomDateRange(today, today));
-        for(CashOrder order : expiredCashOrders) {
+        for (CashOrder order : expiredCashOrders) {
             log.debug("order:{}", order);
             order.changeState(OrderStatus.EXPIRED);
         }
+    }
+
+    public void cancelPayment(String orderId, String cancelReason) {
+        CashOrder cashOrder = cashOrderRepository.findByOrderId(orderId)
+                .orElseThrow(() -> new EntityNotFoundException("Cannot find Cash order Entity. id:" + orderId));
+        validate(cashOrder);
+        tossPaymentInstance.cancelPayment(cashOrder.getPaymentKey(), cancelReason);
+    }
+
+    private void validate(CashOrder cashOrder) {
+        if (!cashOrder.getStatus().equals(OrderStatus.DONE))
+            throw new WrongOrderStateException("계산이 완료된 주문이어야 합니다.");
+        if (cashOrder.getPaymentKey() == null)
+            throw new NullPointerException("PaymentKey가 없습니다.");
+    }
+
+    @Profile("test")
+    public void chargeCash(int amount) {
+        User loggedInUser = authenticationUtil.getLoggedInUser();
+        loggedInUser.chargeCash(amount);
     }
 }
